--- a/course-project/src/App.css
+++ b/course-project/src/App.css
@@ -4,4 +4,28 @@
 
 canvas {
   background: #F6C6CE;
+  padding: 0;
+  margin: auto;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#game-status {
+  font-size: 48pt;
+  font-weight: bolder;
+  color: red;
+  height: 100vh;
+  line-height: 100vh;
+  text-align: center;
+  animation: gameover 4s infinite;
+}
+
+@keyframes gameover {
+  0%   {color: red;}
+  50%  {color: yellow;}
+  100% {color: red;}
 }
