--- a/course-project/src/App.css
+++ b/course-project/src/App.css
@@ -13,13 +13,21 @@ canvas {
   right: 0;
 }
 
-#game-status {
-  font-size: 5em;
+#game-status-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+#game-status p {
+  margin: 1px;
+}
+
+#status-text {
+  font-size: 5rem;
   font-weight: bolder;
   color: red;
-  height: 100vh;
-  line-height: 100vh;
-  text-align: center;
   animation: gameOverKeyFrames 4s infinite;
 }
 
@@ -33,4 +41,20 @@ canvas {
   100% {
     color: red;
   }
+}
+
+#start-btn {
+  font-size: 5rem;
+}
+
+button {
+  font-size: 3rem;
+  border-radius: 10px;
+  border: 2px solid red;
+  background-color: white;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.3), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
